Minor restyling to color picker popup; fixed bug where scrollbars did not update when manually entering color hex; added "apply" button to color picker pop up

--- a/style.css
+++ b/style.css
@@ -329,8 +329,17 @@ input[type=checkbox] {
 	height: 30px !important;
 	background-image: none !important;
 	//border: 1px solid black;
-	border-radius: 2px;
-	box-shadow: inset 0 0 4px black;
+	//border-radius: 2px;
+	box-shadow: inset 0 0 2px black;
+}
+
+.miniColors-selector {
+	-webkit-border-radius: 0px !important;
+	border-radius: 0px !important;
+	border: none !important;
+	padding: 3px 4px !important;
+	height: 167px !important;
+
 }
 
 .miniColors-selector:before {
@@ -344,16 +353,20 @@ input[type=checkbox] {
 	border-color: transparent white transparent transparent;
 	z-index: 10;
 }
-.miniColors-selector:after {
-	content: "";
+
+.miniColors-colors {
+	top: 3px !important;
+	left: 3px !important;
+}
+.miniColors-hues {
+	top: 3px !important;
+}
+
+.miniColors-apply {
+	left: 7px;
+	font-size: 11px;
 	position: absolute;
-	width: 0;
-	height: 0;
-	left: -15px;
-	top: 35%;
-	border: 7px solid;
-	border-color: transparent #BBB transparent transparent;
-	z-index: 5;
+	bottom: 3px;
 }
 
 #save-confirm {
